# S3Watch

./: .gitignore  ASSETS_PARTITION_FIX.md  DUALBOOT_QUICKREF.md  DUALBOOT_README.md  DUALBOOT_SUCCESS.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICKSTART_DUALBOOT.md  TEST_BOOT_SWITCH.md  build_dualboot.sh  flash_dualboot.sh  partitions_dualboot.csv  sdkconfig  sdkconfig.dualboot  setup_xiaozhi.sh  step_monitor.html
components/apps/: CMakeLists.txt  idf_component.yml
components/apps/include/: app_2048.h  app_step_counter.h  app_stopwatch.h  app_watch_faces.h  apps_screen.h
components/apps/src/: app_2048.c  app_step_counter.c  app_stopwatch.c  app_watch_faces.c  apps_screen.c
components/bootloader_override/: CMakeLists.txt
components/bootloader_override/subproject/: CMakeLists.txt
components/bootloader_override/subproject/main/: CMakeLists.txt  bootloader_start.c
components/gui/: CMakeLists.txt
components/gui/icons/: image_apps_icon.c
components/gui/src/: ui.c
components/nimble-nordic-uart/src/: nimble.c
components/sensors/: sensors.c
components/sensors/include/: sensors.h
components/settings/: settings.c
main/: CMakeLists.txt  boot_selector.c  main.cpp
